Created houses route
