# routes/houses.js
@@ -1,0 +1,18 @@
+const express = require("express");
+const router = express.Router();
+
+const {
+  getAll,
+  getOne,
+  createListing,
+  updateListing,
+  deleteListing,
+} = require("../controllers/apartments");
+
+router.get("/", getAll);
+router.get("/:id", getOne);
+router.post("/", createListing);
+router.put("/:id", updateListing);
+router.delete("/:id", deleteListing);
+
+module.exports = router;
